# internal/dto/goal/addGoalProgressDTO.go
@@ -1,0 +1,5 @@
+package goal
+
+type AddProgressDTO struct {
+	Amount float64 `json:"amount" binding:"required,gt=0"`
+}
